log
Thu 07 Sep 2023 04:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
0ceb94c
Thu 07 Sep 2023 04:48:39 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
fedaecf
Thu 07 Sep 2023 06:56:59 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:13: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   60 |             return;
      |             ^~~~~~
hashmap.c:54:11: note: declared here
   54 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff276db
Thu 07 Sep 2023 06:57:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f1547b1
Thu 07 Sep 2023 06:57:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f35c828
Thu 07 Sep 2023 06:59:21 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
7643378
Thu 07 Sep 2023 07:00:01 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
dac225b
Thu 07 Sep 2023 07:00:31 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
37a8e84
Thu 07 Sep 2023 07:06:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
860b48e
Thu 07 Sep 2023 07:29:34 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8615513
Thu 07 Sep 2023 07:34:43 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bb7a4e7
Thu 07 Sep 2023 07:35:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d7afd1a
Thu 07 Sep 2023 07:37:29 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
c415f9f
Thu 07 Sep 2023 07:37:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ffb38b4
Thu 07 Sep 2023 07:42:49 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6d1b4d4
Thu 07 Sep 2023 07:43:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
33e08a7
Thu 07 Sep 2023 07:43:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7b42ad9
Thu 07 Sep 2023 07:44:32 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
cb31f6a
Thu 07 Sep 2023 07:44:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e8ebacf
Thu 07 Sep 2023 07:53:17 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:45: error: expected ‘)’ before ‘{’ token
   58 |         while(map->buckets[posicion] != NULL{
      |              ~                              ^
hashmap.c:68:5: error: expected expression before ‘}’ token
   68 |     }
      |     ^
Compilation failed
7995f0c
Thu 07 Sep 2023 07:53:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
80f1ea8
